// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ip-geolocation can geolocate ip address from Germany 1`] = `
Object {
  "city": Object {
    "name": "Frankfurt am Main (Innenstadt I)",
  },
  "continent": Object {
    "code": "EU",
    "name": "Europe",
  },
  "country": Object {
    "code": "DE",
    "isInEuropeanUnion": true,
    "name": "Germany",
  },
  "location": Object {
    "latitude": 50,
    "longitude": 9,
  },
  "subdivision": Object {
    "name": "Hesse",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from South Africa 1`] = `
Object {
  "city": Object {
    "name": "Johannesburg",
  },
  "continent": Object {
    "code": "AF",
    "name": "Africa",
  },
  "country": Object {
    "code": "ZA",
    "isInEuropeanUnion": false,
    "name": "South Africa",
  },
  "location": Object {
    "latitude": -26,
    "longitude": 28,
  },
  "subdivision": Object {
    "name": "Gauteng",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from the UK 1`] = `
Object {
  "city": Object {
    "name": "Scholes",
  },
  "continent": Object {
    "code": "EU",
    "name": "Europe",
  },
  "country": Object {
    "code": "GB",
    "isInEuropeanUnion": false,
    "name": "United Kingdom",
  },
  "location": Object {
    "latitude": 54,
    "longitude": -1,
  },
  "subdivision": Object {
    "name": "England",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from the USA 1`] = `
Object {
  "city": Object {
    "name": "Secaucus",
  },
  "continent": Object {
    "code": "NA",
    "name": "North America",
  },
  "country": Object {
    "code": "US",
    "isInEuropeanUnion": false,
    "name": "United States",
  },
  "location": Object {
    "latitude": 41,
    "longitude": -74,
  },
  "subdivision": Object {
    "name": "New Jersey",
  },
}
`;

exports[`ip-geolocation errors if the database does not exist 1`] = `[Error: Database file at foo.mmdb does not exist]`;
